tests/errors/semantic/E009_dup_export.zy
# E009_dup_export {
    #> { add, add }

    add(a, b) { <~ a + b }
}
